# tokamunch

./: .gitignore  .pre-commit-config.yaml  README.md  munchi.toml  pyproject.toml
.github/workflows/: docs.yml  test-and-upload.yml
docs/: api.rst  architecture.md  checks.rst  cli.rst  conf.py  config.rst  conversion.rst  development.rst  diff.rst  index.rst  mapping-annotations.rst  mapping-files.rst  path-syntax.rst  profiling.rst
src/: cli.py
src/tokamunch/: __init__.py  _version.py  checkpoint.py  checks.py  cli.py  completions.py  config.py  context.py  convert.py  data_source_interface.py  diff.py  ids_helper.py  ids_writer.py  imas_dd.py  mapper.py  mapping.py  outputs.py  parsing.py  path_expansion.py  plugin_api.py  plugins.py  profiling.py  selection.py  templates.py  trie.py  types.py  write_ids.py
src/tokamunch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tokamunch/cli/: __init__.py  common.py  main.py  parser.py
src/tokamunch/cli/commands/: __init__.py  check.py  completions.py  convert.py  diff.py  init.py  map.py  paths.py  update.py
src/tokamunch/core/: __init__.py  checkpoint.py  checks.py  config.py  context.py  selection.py
src/tokamunch/ids/: __init__.py  helper.py  imas_dd.py  mutation.py  output.py  parsing.py  path_expansion.py  templates.py  trie.py
src/tokamunch/io/: __init__.py  convert.py  diff.py  outputs.py
src/tokamunch/mapping/: __init__.py  data_source.py  mapper_factory.py  runner.py
src/tokamunch/plugins/: __init__.py  registry.py
test/: magnetics.h5  master.h5
tests/: test_checkpoint.py  test_cli_new_commands.py  test_completions.py  test_config.py  test_convert.py  test_data_source_interface.py  test_diff.py  test_ids_helper.py  test_ids_writer.py  test_lib_use.py  test_mapping.py  test_outputs.py  test_parsing.py  test_path_expansion.py  test_populate_ids.py  test_profiling.py  test_selection.py  test_templates.py  test_trie.py
